--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+backports.zoneinfo==0.2.1
 click==8.1.3
 Flask==2.1.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 itsdangerous==2.1.2
-Werkzeug==2.1.2
-flask_sqlalchemy==2.5.1
+psycopg==3.0.15
 psycopg2==2.9.3
+SQLAlchemy==1.4.39
+Werkzeug==2.1.2
